--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>TEHNIKUM CODING</h1>
     <h2>РУЛИТ</h2>
+    <img src="./photo.jpeg" alt="Юрий Максимович зимняя фотосессия" class="myPhoto"> 
 </body>
 </html>
