--- a/landing 8/index.html
+++ b/landing 8/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./splide-4.1.3/dist/css/splide.min.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./splide-4.1.3/dist/css/splide.min.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
   </head>
   <body>
     <section class="course_info_bg">
-      <img src="./image/logo.png" alt="logo" class="logo" />
+      <img src="./image/logo.png" alt="logo" class="logo">
       <div class="course_info">
         <div>
           <span class="title">старт</span>
@@ -193,7 +193,7 @@
         
         <h4>оставь заявку</h4>
         <span>начало обучения: 1 декабря</span>
-        <form action="">
+        <form action="#">
           <input type="text" placeholder="Имя">
           <input type="text" placeholder="Фамилия">
           <input type="tel" placeholder="+998">
