--- a/landing 8/index.html
+++ b/landing 8/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section class="course_info_bg">
-      <img src="./image/logo.png" alt="logo" class="logo">
+      <img src="./image/logo.png" alt="TEHNIKUM Coding logo" class="logo">
       <div class="course_info">
         <div>
           <span class="title">старт</span>
@@ -74,19 +74,19 @@
           </p>
           <div class="skills">
             <div class="skill">
-              <img src="./image/icon_cool.svg" alt="" />
+              <img src="./image/icon_cool.svg" alt="Cool emoji" />
               <span>Руководитель TEHNIKUM.CODING</span>
             </div>
             <div class="skill">
-              <img src="./image/icon_winning_cup.svg" alt="" />
+              <img src="./image/icon_winning_cup.svg" alt="Winning Cup icon" />
               <span>Призер международных олимпиад</span>
             </div>
             <div class="skill">
-              <img src="./image/icon_case.svg" alt="" />
+              <img src="./image/icon_case.svg" alt="case icon" />
               <span>Работал с компаниями Hi-Tech Bank, UGGI, 1C-Bitrix</span>
             </div>
             <div class="skill">
-              <img src="./image/icon_keyboard.svg" alt="" />
+              <img src="./image/icon_keyboard.svg" alt="keyboard icon" />
               <span>Более 10 лет опыта в программировании</span>
             </div>
           </div>
@@ -95,7 +95,7 @@
     </section>
     <section>
       <div class="courseProgram">
-        <img class="courseImg" src="./image/course-program-corner.svg" alt="" />
+        <img class="courseImg" src="./image/course-program-corner.svg" alt="corner" />
         <h2>Программа курса</h2>
         <ul>
           <li>Урок №1: Знакомство с html, css, js и разница между ними</li>
@@ -121,7 +121,7 @@
             <li class="splide__slide">
               <div class="review">
                 <div>
-                  <img class="youtube" src="./image/youtube.svg" alt="" />
+                  <img class="youtube" src="./image/youtube.svg" alt="youtube icon" />
                   <p>
                     Я пришел в Техникум чтобы сменить профессию на front-end
                     разработчика и окончательно расстаться с предыдущим местом
@@ -130,7 +130,7 @@
                   </p>
                 </div>
                 <div class="clientReview">
-                  <img src="./image/reviewImg1.jpg" alt="" />
+                  <img src="./image/reviewImg1.jpg" alt="Руслан Мухутдинов" />
                   <span>Руслан Мухутдинов</span>
                 </div>
               </div>
@@ -138,7 +138,7 @@
             <li class="splide__slide">
               <div class="review">
                 <div>
-                  <img class="youtube" src="./image/youtube.svg" alt="" />
+                  <img class="youtube" src="./image/youtube.svg" alt="youtube icon" />
                   <p>
                     Я выбрал курс веб-верстальщика, потому что мне это нравится
                     и это круто. После окончания курса, за хорошую учебу, меня
@@ -147,7 +147,7 @@
                   </p>
                 </div>
                 <div class="clientReview">
-                  <img src="./image/reviewImg2.jpg" alt="" />
+                  <img src="./image/reviewImg2.jpg" alt="Юлдашев Искандер" />
                   <span>Юлдашев Искандер</span>
                 </div>
               </div>
@@ -155,7 +155,7 @@
             <li class="splide__slide">
               <div class="review">
                 <div>
-                  <img class="youtube" src="./image/youtube.svg" alt="" />
+                  <img class="youtube" src="./image/youtube.svg" alt="youtube icon" />
                   <p>
                     Я увидел что Техникум всех приглашает на бесплатную лекцию
                     по программированию. Меня это заинтересовало, после лекции я
@@ -164,7 +164,7 @@
                   </p>
                 </div>
                 <div class="clientReview">
-                  <img src="./image/reviewImg3.jpg" alt="" />
+                  <img src="./image/reviewImg3.jpg" alt="Махмудов Джахонгир" />
                   <span>Махмудов Джахонгир </span>
                 </div>
               </div>
@@ -177,15 +177,15 @@
       <div class="footerLeft">
         <h2>запишись на курс прямо сейчас!</h2>
         <div class="record">
-          <img src="./image/keyboard.svg" alt="">
+          <img src="./image/keyboard.svg" alt="keyboard icon">
           <span>html, css, js</span>
         </div>
         <div class="record">
-          <img src="./image/icon_game_bot.svg" alt="">
+          <img src="./image/icon_game_bot.svg" alt="game bot icon">
           <span>Разработка онлайн игр</span>
         </div>
         <div class="record">
-          <img src="./image/bootstrap.svg" alt="">
+          <img src="./image/bootstrap.svg" alt="bootstrap icon">
           <span>Введение в Bootstrap и Github</span>
         </div>
       </div>
