--- a/landing 8/index.html
+++ b/landing 8/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./splide-4.1.3/dist/css/splide.min.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    
+    <title>Курсы FRONTEND разработки в Ташкенте</title>
+    <link rel="icon" href="./image/icon_winning_cup.svg" type="image/svg+xml">
   </head>
   <body>
     <section class="course_info_bg">
