--- a/landing 8/index.html
+++ b/landing 8/index.html
@@ -9,6 +9,24 @@
     
     <title>Курсы FRONTEND разработки в Ташкенте</title>
     <link rel="icon" href="./image/icon_winning_cup.svg" type="image/svg+xml">
+
+    <meta name="description" content="Запишитесь на курс 'Frontend разработчик' в Ташкенте и освоите HTML, CSS, JavaScript, React и другие востребованные технологии. Практические занятия и помощь в трудоустройстве.">
+    <meta name="keywords" content="Frontend разработчик, курсы программирования, Ташкент, HTML, CSS, JavaScript, React, обучение IT, курсы программирования Ташкент">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph для социальных сетей -->
+    <meta property="og:title" content="Курс 'Frontend разработчик' в Ташкенте">
+    <meta property="og:description" content="Освойте популярные технологии фронтенд-разработки на курсе в Ташкенте. Практические занятия и помощь в трудоустройстве.">
+    <meta property="og:image" content="https://example.com/images/frontend-course.jpg">
+    <meta property="og:url" content="https://example.com/frontend-developer-tashkent">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Курс 'Frontend разработчик' в Ташкенте">
+    <meta name="twitter:description" content="Запишитесь на курс и станьте профессиональным Frontend разработчиком.">
+    <meta name="twitter:image" content="https://example.com/images/frontend-course.jpg">
+
   </head>
   <body>
     <section class="course_info_bg">
