--- a/landing 8/index.html
+++ b/landing 8/index.html
@@ -17,15 +17,15 @@
     <!-- Open Graph для социальных сетей -->
     <meta property="og:title" content="Курс 'Frontend разработчик' в Ташкенте">
     <meta property="og:description" content="Освойте популярные технологии фронтенд-разработки на курсе в Ташкенте. Практические занятия и помощь в трудоустройстве.">
-    <meta property="og:image" content="https://example.com/images/frontend-course.jpg">
-    <meta property="og:url" content="https://example.com/frontend-developer-tashkent">
+    <meta property="og:image" content="https://y-maksimovich.github.io/course-55/landing%208/image/html_css_js%201.png">
+    <meta property="og:url" content="https://y-maksimovich.github.io/course-55/landing%208/">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Курс 'Frontend разработчик' в Ташкенте">
     <meta name="twitter:description" content="Запишитесь на курс и станьте профессиональным Frontend разработчиком.">
-    <meta name="twitter:image" content="https://example.com/images/frontend-course.jpg">
+    <meta name="twitter:image" content="https://y-maksimovich.github.io/course-55/landing%208/image/html_css_js%201.png">
 
   </head>
   <body>
