change meta data

--- a/landing 8/index.html
+++ b/landing 8/index.html
@@ -23,7 +23,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Курс 'Frontend разработчик' в Ташкенте">
+    <meta name="twitter:title" content="Курс Frontend разработчик в Ташкенте">
     <meta name="twitter:description" content="Запишитесь на курс и станьте профессиональным Frontend разработчиком.">
     <meta name="twitter:image" content="https://y-maksimovich.github.io/course-55/landing%208/image/html_css_js%201.png">
 
